fixed overlapping of messages

--- a/app/static/home.css
+++ b/app/static/home.css
@@ -64,7 +64,6 @@ body {
   
   height: 30px;
   display: inline;
-  border-image-source:  url("/static/images/border.jpg");
   float: left;
   width: auto;
   border: 1px solid grey;
@@ -77,17 +76,18 @@ body {
 }
 #bot{
   margin-left:300px;
-  height: 30px;
+  overflow: auto;
   display: inline;
   float: right;
   width: auto;
   font-weight: bold;
   border: 1px solid grey;
   border-radius: 15px;
-  background-color:#a2ccfb;
+  background-color:#9eeff7;
   padding-top: 7px;
   padding-left: 7px;
   padding-right: 7px;
+  padding-bottom: 7px;
 }
 
 #chatbox {
